:Date: $Date$
:Revision: $Revision$
:Web site: http://docutils.sourceforge.net/
:Copyright: This document has been placed in the public domain.


This document summarizes the major changes in recent and upcoming releases.
For a more detailed list of changes, please see the `Docutils History`_.

.. _Docutils History: HISTORY.html

.. contents::

Future changes
==============

* The "latex" writer will wrap admonitions in a "DUclass" environment.
  Stylesheets modifying "\DUadmonition" will need to adapt.

  Styling commands using ``\docutilsrole`` prefix will be ignored
  in versions > 0.16 (see `Generating LaTeX with Docutils`__).

  __ docs/user/latex.html#classes

* Node.traverse() will return an iterator instead of a list.

* Remove `utils.unique_combinations` (obsoleted by `itertools.combinations`).

* The default HTML writer "html" with frontend ``rst2html.py`` may change
  from "html4css1" to "html5".

  Use `get_writer_by_name('html')` or the rst2html.py_ front end, if you
  want the output to be up-to-date automatically.

  Use a specific writer name or front end, if you depend on stability of the
  generated HTML code, e.g. because you use a custom style sheet or
  post-processing that may break otherwise.

.. _rst2html.py: docs/user/tools.html#rst2html-py


Release 0.16
============

.. Note::

   Docutils 0.15.x is the last version supporting Python 2.6, 3.3, and 3.4.

   Docutils 0.16 is compatible with Python versions 2.7 and 3.5 to 3.7.
   (cf. `Python 3 compatibility`_).

* General:

  - Docutils now supports Python 2.7 and Python 3.5+ natively,
    without the use of the ``2to3`` tool.

* reStructuredText:

  - Keep `backslash escapes`__ in the document tree. This allows, e.g.,
    escaping of author-separators in `bibliographic fields`__.

  __ http://docutils.sourceforge.net/docs/ref/rst/restructuredtext.html#escaping-mechanism
  __ docs/ref/rst/restructuredtext.html#bibliographic-fields


* LaTeX writer:
